[package]
name = "commit-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.12.1"
clap = { version = "4.3.15", features = ["derive"] }
cli-clipboard = "0.4.0"
tokio = { version = "1.29.1", features = ["full"] }
