[package]
name = "commit-gpt"
version = "1.0.0"
edition = "2021"
authors = ["Umut Seven <umutseven92@gmail.com>"]
license = "MIT"
description = "Generate git commit messages using ChatGPT."
readme = "README.md"
homepage = "https://github.com/umutseven92/commit-gpt"
repository = "https://github.com/umutseven92/commit-gpt"
keywords = ["cli", "git", "commit", "chatgpt", "openai"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.12.1"
clap = { version = "4.3.15", features = ["derive"] }
cli-clipboard = "0.4.0"
tokio = { version = "1.29.1", features = ["full"] }
